--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
   "devDependencies": {
   },
   "peerDependencies": {
-    "strophe.js": "^1.2.12"
+    "strophe.js": "github:jonrmar/strophejs"
   }
 }
